<resources>
    <string name="app_name">OBD_dev_version</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="welcome_main_page_str">Welcome to QR Data Manager</string>
    <string name="welcome_page_str_login">Login:</string>
    <string name="welcome_page_str_enter_login">Enter login</string>
    <string name="welcome_page_str_pass">Password:</string>
    <string name="welcome_page_str_enter_pass">Enter password</string>
    <string name="welcome_auth_page_str_label">Enter login and password:</string>
    <string name="welcome_auth_page_str_button">Log in</string>
    <string name="welcome_reg_page_str_button">Create account</string>
    <string name="welcome_reg_page_str_email">Email:</string>
    <string name="welcome_reg_page_str_enter_email">Enter email</string>
    <string name="welcome_page_nav_str_next">Next</string>
    <string name="welcome_page_nav_str_back">Back</string>
    <string name="welcome_page_nav_str_sign_in">Sign in</string>
    <string name="welcome_reg_page_str_label">Creating new account</string>

    <string name="main_page_top_tool_bar_str_main">Main Menu</string>
    <string name="main_page_top_tool_bar_str_profile">Profile</string>
    <string name="main_page_top_tool_bar_str_qr_scan">QR Scanner</string>
    <string name="main_page_top_tool_bar_str_database">Table Redactor</string>
    <string name="main_page_top_tool_bar_str_qr_gen">QR Generator</string>

    <string name="main_user_page_str_log_out_button">Log Out</string>
    <string name="main_user_page_str_change_pass_button">Change password</string>
    <string name="main_user_page_str_email_label">Email:</string>
    <string name="main_user_page_str_email">User email</string>
    <string name="main_user_page_str_login_label">Login:</string>
    <string name="main_user_page_str_login">User login</string>
    <string name="main_user_page_str_label">Account Information</string>

    <string name="main_import_qr_page_str_open_camera">Open Camera</string>
    <string name="main_import_qr_page_str_upload_from_storage">Upload from storage</string>

    <string name="main_home_page_str_label">My Tables List</string>
    <string name="main_home_page_str_add_button">Add table</string>
    <string name="main_home_page_str_delete_button">Delete table</string>

    <string name="main_database_page_str_label">Table Redactor</string>
    <string name="main_database_page_str_list_label">Choose table to work with:</string>
    <string name="main_database_page_str_add_delete_data_button">Add/Delete data</string>
    <string name="main_database_page_str_view_data_button">View data</string>
    <string name="main_database_page_str_redact_data_button">Redact data</string>
    <string name="main_database_page_str_add_delete_access_button">Share/Remove access to table</string>

    <string name="main_gen_qr_page_str_label">Generating QR</string>
    <string name="main_gen_qr_page_str_tables_label">Choose table to extract data from:</string>
    <string name="main_gen_qr_page_str_data_button">Choose data</string>
    <string name="main_gen_qr_page_str_stored_button">Open list of created QR\'s</string>

    <string name="main_gen_qr_page_str_list_created_qr_label">Recently created QR\'s</string>

    <string name="main_gen_qr_page_str_choosing_data_label">Choose data from list</string>
    <string name="main_gen_qr_page_str_choosing_data_button">Generate QR</string>

    <string name="main_page_back_button">Back</string>

    <string name="main_database_page_str_add_delete_add_data_button">Add data</string>
    <string name="main_database_page_str_add_delete_delete_data_button">Delete chosen data</string>
    <string name="main_database_str_add_delete_data_label">Choose data from list to delete</string>

    <string name="main_database_page_str_add_data_label">Enter new data to the table</string>
    <string name="main_database_page_str_add_data_enter_data_hint">Enter data</string>

    <string name="main_database_page_str_redact_choosing_data_redact_data_button">Redact chosen data</string>
    <string name="main_database_page_str_redact_choosing_data_label">Choose data from list to redact</string>

    <string name="main_database_page_str_data_view">Data</string>

    <string name="main_home_add_table_page_str_label">Enter data about new table</string>
    <string name="main_home_add_table_page_str_table_name_label">Table name:</string>
    <string name="main_home_add_table_page_str_enter_table_name">Enter table name</string>
    <string name="main_home_add_table_page_str_columns_list_label">Table columns:</string>
    <string name="main_home_add_table_page_str_button">Add table</string>

    <string name="style_add_delete_column_item_str_name_label">Column name:</string>
    <string name="style_add_delete_column_item_str_enter_name">Enter column name</string>
    <string name="style_add_delete_column_item_str_data_type_label">Data type:</string>
    <string name="style_spinner_data_type_item_str">Choose type of data</string>
    <string name="main_page_scan_data_str_label">Data from QR code</string>


</resources>