<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main_page_user"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/main_gen_qr_page_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/main_user_page_str_label"
            android:textColor="@color/gray"
            android:textSize="23sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/main_user_page_login_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/main_user_page_str_login_label"
                android:textColor="@color/gray"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/main_user_page_login_textbox"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/box_for_edittext"
                android:ems="10"
                android:fontFamily="@font/inter_medium"
                android:hint="@string/main_user_page_str_login"
                android:paddingStart="7dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColor="@color/almostblack"
                android:textColorHint="@color/gray_on_gray"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/main_user_page_email_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/main_user_page_str_email_label"
                android:textColor="@color/gray"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/main_user_page_email_textbox"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="@font/inter_medium"
                android:hint="@string/main_user_page_str_email"
                android:textColor="@color/almostblack"
                android:textColorHint="@color/gray_on_gray"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingStart="7dp"
                android:background="@drawable/box_for_edittext"/>

            <Button
                android:id="@+id/main_user_page_change_pass_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/gray"
                android:text="@string/main_user_page_str_change_pass_button"
                android:textColor="@color/almostblack"
                android:textSize="20sp"
                app:rippleColor="@color/gray_on_gray" />

            <Button
                android:id="@+id/main_user_page_log_out_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/gray"
                android:text="@string/main_user_page_str_log_out_button"
                android:textColor="@color/almostblack"
                android:textSize="20sp"
                app:rippleColor="@color/gray_on_gray" />
        </LinearLayout>


    </LinearLayout>


</RelativeLayout>