<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    tools:context=".Main_page_database_add_data">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp">

        <TextView
            android:id="@+id/main_database_add_data_main_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/inter_bold"
            android:text="@string/main_database_page_str_add_data_label"
            android:textColor="@color/gray"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/main_database_add_data_list_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/main_home_add_table_page_str_columns_list_label"
            android:textColor="@color/gray"
            android:textSize="20sp" />

        <View
            android:id="@+id/divider_top"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/gray" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_database_add_data_columns_list"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="5dp">

        </androidx.recyclerview.widget.RecyclerView>

        <View
            android:id="@+id/divider_bottom"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/gray" />

        <Button
            android:id="@+id/main_database_add_data_add_button"
            app:rippleColor="@color/gray_on_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="@color/gray"
            android:text="@string/main_home_add_table_page_str_button"
            android:textColor="@color/almostblack"
            android:textSize="20sp" />

        <Button
            android:id="@+id/main_database_add_data_back_button"
            app:rippleColor="@color/gray_on_gray"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="40dp"
            android:backgroundTint="@color/gray"
            android:text="@string/main_page_back_button"
            android:textColor="@color/almostblack"
            android:textSize="20sp" />
    </LinearLayout>
</RelativeLayout>