<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Main_page_home">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/main_gen_qr_spinner_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/inter_medium"
            android:text="@string/main_gen_qr_page_str_tables_label"
            android:textColor="@color/gray"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/main_gen_qr_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:layout_marginTop="20dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
        <Button
            android:id="@+id/main_gen_qr_page_choose_data_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/gray"
            android:text="@string/main_gen_qr_page_str_data_button"
            android:textColor="@color/almostblack"
            android:textSize="20sp"
            app:rippleColor="@color/gray_on_gray" />

        <Button
            android:id="@+id/main_gen_qr_page_list_created_qr_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/gray"
            android:text="@string/main_gen_qr_page_str_stored_button"
            android:textColor="@color/almostblack"
            android:textSize="20sp"

            app:rippleColor="@color/gray_on_gray" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>