<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingStart="10dp"
    android:paddingTop="10dp"
    android:paddingEnd="10dp"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/number_column_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="1"
        android:textColor="@color/gray"
        android:textSize="24sp"
        android:layout_marginEnd="10dp"/>

    <LinearLayout
        android:id="@+id/table_data_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/column_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:text="@string/style_add_delete_column_item_str_name_label"
            android:textColor="@color/gray"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/column_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/box_for_edittext"
            android:ems="10"
            android:fontFamily="@font/inter_medium"
            android:hint="@string/style_add_delete_column_item_str_enter_name"
            android:paddingStart="7dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@color/almostblack"
            android:textColorHint="@color/gray_on_gray"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/column_data_type_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/inter_bold"
            android:text="@string/style_add_delete_column_item_str_data_type_label"
            android:textColor="@color/gray"
            android:textSize="18sp" />
        />

        <Spinner
            android:id="@+id/column_data_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/bg_spinner_data_type"
            android:backgroundTint="@null"
            android:dropDownVerticalOffset = "35dp"
            android:paddingStart="7dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

</LinearLayout>